# sdl2-project-template

./: .gitignore  CMakeLists.txt  README.md
include/: projectName_functions.h
src/: main.c  projectName_functions.c
